# Interactive-ARAP

./: .gitignore  CMakeLists.txt  README.md  index.md
data/: bunny_closed.off
include/: ControlPoints.h  Polygon.h  arap_precompute.h  arap_single_iteration.h  cotagent.h  cotagent_matrix.h  init_system_matrix.h  polygon.h  polygon_test.h
src/: CMakeLists.txt  ControlPoints.cpp  Polygon.cpp  arap_precompute.cpp  arap_single_iteration.cpp  cotagent.cpp  cotagent_matrix.cpp  init_system_matrix.cpp  main.cpp  polygon_test.cpp
